fix: preparar backend para Railway - CORS dinámico, mvnw ejecutable, limpieza de dependencias